2003-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=106148.
	* src/expr.c (cellrange_relocate) : In situations where only part of a
	  range ref is moving we may not need to change the expression.
	  However, thiings will not be queued for recalc if the expression is
	  not changed, so pretend to change it.

2003-02-15  Jody Goldberg <jody@gnome.org>

	* src/plugin-loader-module.c
	(gnumeric_plugin_loader_module_load_service_plugin_loader) : simplify.

2003-02-11  Jody Goldberg <jody@gnome.org>

	* src/plugin-service.c (plugin_service_new) : use a hash table for the
	  service types.
	(plugin_services_init) : new to define the builtin services.
	(plugin_services_shutdown) : new.
	(plugin_service_define) : allow the definition of new service types.

2003-02-10  Morten Welinder  <terra@diku.dk>

	* src/xml-io.c (xml_read_cell_copy): Fix 104669.

2003-02-09  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* schemas/gnumeric-dialogs.schemas.in,
	schemas/gnumeric-general.schemas.in: Added <list_type>s to fix the
	warnings on schema installation.

2003-02-08  Jody Goldberg <jody@gnome.org>

	* configure.in : Remove tests for evolution.  We can use the simpler
	  command line interface with far fewer worries.
	* configure.in : remove mr_IN until there is content

2003-02-07  Morten Welinder  <terra@diku.dk>

	* src/rendered-value.h: Store a GdkColor here in order to work
	around http://bugzilla.gnome.org/show_bug.cgi?id=105322.

2003-02-03  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (wb_view_new_from_input) : A name match needs to
	  be a content match too.
	(wb_view_new_from_file) : suppress warnings.

2003-02-02  Jody Goldberg <jody@gnome.org>

	* src/mstyle.c (mstyle_get_pango_attrs) : The mstyle uses the ref to
	  the new list so we need to add a ref for the result.

2003-02-01  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* README: Updated; added Debian package names.

2003-01-28  Jody Goldberg <jody@gnome.org>
